--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   {{title}}
 </h1>
 
-<button routerLink="/customers">Customers</button>
-<button routerLink="/orders">Orders</button>
-<button routerLink="">Home</button>
+<button type = "button" class="btn btn-primary" routerLink="/customers">Customers</button>
+<button type = "button" class="btn btn-primary" routerLink="/orders">Orders</button>
+<button type = "button" class="btn btn-primary" routerLink="">Home</button>
 
 <router-outlet></router-outlet>
