--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <h1>
   {{title}}
 </h1>
-
-<button type = "button" class="btn btn-primary" routerLink="/customers">Customers</button>
-<button type = "button" class="btn btn-primary" routerLink="/orders">Orders</button>
-<button type = "button" class="btn btn-primary" routerLink="">Home</button>
-
+<form>
+  <div class="form-group">
+    <button type = "button" class="btn btn-primary" routerLink="/customers">Customers</button>
+    <button type = "button" class="btn btn-primary" routerLink="/orders">Orders</button>
+    <button type = "button" class="btn btn-primary" routerLink="">Home</button>
+  </div>
+</form>
 <router-outlet></router-outlet>
