--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<h1> {{title}} </h1>
 <button type = "button" class="btn btn-primary" routerLink="/customers">Customers Routes</button>
 <button type = "button" class="btn btn-primary" routerLink="/orders">Orders Routes</button>
 <button type = "button" class="btn btn-primary" routerLink="">Home Route</button>
